--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "react-multi-date-picker": "^4.5.2",
     "react-phone-number-input": "^3.4.12",
     "react-redux": "^9.2.0",
+    "react-select": "^5.10.2",
     "react-svg": "^16.3.0",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "redux-persist": "^6.0.0",
     "socket.io-client": "^4.8.1",
     "yup": "^1.7.0"
