--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-modern-drawer": "^1.4.0",
     "react-multi-date-picker": "^4.5.2",
     "react-phone-number-input": "^3.4.12",
+    "react-quill-new": "^3.6.0",
     "react-redux": "^9.2.0",
     "react-select": "^5.10.2",
     "react-star-ratings": "^2.3.0",
